tests/snapshots/snapshot_test__render_very_deep_tree.snap
---
source: tests/snapshot_test.rs
assertion_line: 293
expression: terminal.backend()
---
"                                                                                "
" Level 0 (Root) ───── Level 1 ───── Level 2 ───── Level 3 ───── Level 4 ───── Le"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 11 nodes                                                                "
