tests/snapshots/snapshot_test__render_wide_tree.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                                "
"                              ╭ Another extremely long      ╭ This grandchild al"
"                              │ child node title that   ────╯ will test the wrap"
" This is a very long root     │ exceeds normal width          tree structure    "
" node title that should   ────┤ constraints and needs                           "
" wrap when displayed in       │ proper text wrapping to                         "
" the terminal                 │ display correctly                               "
"                              │                                                 "
"                              ╰ Short child                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 4 nodes                                                                 "
