tests/snapshots/snapshot_test__render_with_collapsed_node.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                                "
"                   ╭ Features  [+]                                              "
"                   │                                                            "
" Mind Map Root ────┤                  ╭ model.rs                                "
"                   ╰ Architecture ────┤                                         "
"                                      ╰ ui.rs                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 7 nodes                                                                 "
