tests/snapshots/snapshot_test__render_with_hidden_node.snap
---
source: tests/snapshot_test.rs
assertion_line: 179
expression: terminal.backend()
---
"                                                                                "
"                   ╭ Features ─╫─── ✗ Failed Task                               "
"                   │                                                            "
" Mind Map Root ────┤                  ╭ model.rs                                "
"                   ╰ Architecture ────┤                                         "
"                                      ╰ ui.rs                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 7 nodes                                                                 "
