tests/snapshots/snapshot_test__render_with_message.snap
---
source: tests/snapshot_test.rs
assertion_line: 159
expression: terminal.backend()
---
"                                                                                "
"                                  ╭ ✓ Completed Task                            "
"                   ╭ Features ────┤                                             "
"                   │              ╰ ✗ Failed Task                               "
" Mind Map Root ────┤                                                            "
"                   │                  ╭ model.rs                                "
"                   ╰ Architecture ────┤                                         "
"                                      ╰ ui.rs                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"File saved successfully!                                                        "
