tests/snapshots/snapshot_test__render_with_symbols.snap
---
source: tests/snapshot_test.rs
assertion_line: 233
expression: terminal.backend()
---
"                                                                                "
"                                  ╭ ✓ Completed Task                            "
"                   ╭ Features ────┤                                             "
"                   │              ╰ ✗ Failed Task                               "
" Mind Map Root ────┤                                                            "
"                   │                  ╭ model.rs                                "
"                   ╰ Architecture ────┤                                         "
"                                      ╰ ui.rs                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 7 nodes                                                                 "
