tests/snapshots/snapshot_test__render_with_viewport_offset.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                                "
"                        ╭ ✓ Completed Task                                      "
"         ╭ Features ────┤                                                       "
"         │              ╰ ✗ Failed Task                                         "
"Root ────┤                                                                      "
"         │                  ╭ model.rs                                          "
"         ╰ Architecture ────┤                                                   "
"                            ╰ ui.rs                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 7 nodes                                                                 "
